Bug 436071 - Relative URL field doesn't use correct base path
Summary: Relative URL field doesn't use correct base path
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-23 01:31 UTC by Robby Stephenson
Modified: 2021-04-26 01:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2021-04-23 01:31:05 UTC
SUMMARY
A Url field with relative=true doesn't open the correct path from the Entry View.
https://forum.kde.org/viewtopic.php?f=200&t=170908
Comment 1 Robby Stephenson 2021-04-26 01:27:42 UTC
Git commit ec9b8d45c4732af4da0205c6f6cb88c491aea3ff by Robby Stephenson.
Committed on 26/04/2021 at 00:29.
Pushed by rstephenson into branch '3.4'.

Ensure relative links are converted to absolute in Entry View.

Since the Entry View uses the XSL template file as the base to allow
relative media in the HTML export, relative links in the collection must
be converted to absolute in the view.

Add a new export option and check that in the XML export.
FIXED-IN: 3.4.1

M  +4    -0    ChangeLog
M  +2    -0    src/entryview.cpp
A  +20   -0    src/tests/data/relative-link.xml
M  +4    -2    src/tests/modstest.cpp
M  +32   -0    src/tests/tellicoreadtest.cpp
M  +1    -0    src/tests/tellicoreadtest.h
M  +10   -9    src/translators/exporter.h
M  +17   -4    src/translators/tellicoxmlexporter.cpp

https://invent.kde.org/office/tellico/commit/ec9b8d45c4732af4da0205c6f6cb88c491aea3ff