Ensure relative links are converted to absolute in Entry View.

Since the Entry View uses the XSL template file as the base to allow
relative media in the HTML export, relative links in the collection must
be converted to absolute in the view.

Add a new export option and check that in the XML export.

BUG: 436071
FIXED-IN: 3.4.1